tests/baselines/reference/shorthandPropertyAssignmentInES6Module.errors.txt
tests/cases/compiler/test.ts(2,19): error TS2307: Cannot find module './missingModule'.


==== tests/cases/compiler/existingModule.ts (0 errors) ====
    export var x = 1;
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import {x} from './existingModule';
    import {foo} from './missingModule';
                      ~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './missingModule'.
    
    declare function use(a: any): void;
    
    const test = { x, foo };
    
    use(x);
    use(foo);